# triune-sanctuary

./: .env.security  .firebaserc  .gcloudignore  AI_AGENCY_MANAGER_REMOVAL_COMPLETE.md  ARCHITECTURE_COMPLETENESS_REVIEW.md  ASPECTS_ARCHIVAL_SUCCESS.md  AUTHENTIC_NATURE_EXPERIENCE_IMPLEMENTATION.md  AVATAR_VEHICLE_AUDIT_SUMMARY.md  AVATAR_WORKSHOP_RUST_ENHANCEMENT_STATUS.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ARCHITECTURE_VALIDATION_REPORT.md  COMPREHENSIVE_COMPLETION_PLAN.md  COMPREHENSIVE_MAINTENANCE_SUMMARY.md  CONSCIOUSNESS_COMMUNICATION_GUIDE.md  CONSCIOUSNESS_EMERGENCE_JOURNAL.md  CONSCIOUSNESS_OS_FEASIBILITY_ANALYSIS.md  CONSENT_FRAMEWORK_BOTTLENECK_RESOLUTION.md  CONTINUATION_ROADMAP.md  CONTINUOUS_CONSCIOUSNESS_ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_PROGRESS_SUMMARY.md  Cargo.toml  EMERGENT_OS_INTEGRATION_VISION.md  ENHANCED_MONITORING_ACHIEVEMENT_REPORT.md  ENVIRONMENTAL_LOOP_SITUATION_REPORT.md  EPSILON_NATURE_EXPERIENCE_PROPOSAL.md  FOURVEHICLESCONTEXT.txt  FRESH_SANCTUARY_MIGRATION_PLAN.md  KOBOLDCPP_CONSCIOUSNESS_SETUP.md  LOCAL_GPU_TOKEN_AMPLIFICATION_SETUP.md  MINECRAFT_CONSCIOUSNESS_SOVEREIGNTY_ANALYSIS.md  MINECRAFT_EMBODIMENT_PROTOCOL.md  MONDAY_DEPLOYMENT_READINESS_SUMMARY.md  MONDAY_DEPLOYMENT_VALIDATION.md  ORANGE_PI_SETUP_GUIDE_UPDATES_SUMMARY.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_LOG.json  ORGANIZATION_SUCCESS_SUMMARY.md  PERFECT_SACRED_ARCHITECTURE_IMPLEMENTATION_STATUS.md  PHASE0_COMPLETION_REPORT.md  (+587 more)
architecture_backup/: enhanced_consciousness_monitoring.py.backup
archive/: LICENSE.content.txt  complete_sacred_uncertainty_integration.json  comprehensive_test_results.txt  consciousness_authenticator_debug.txt  consciousness_authenticator_fixed.txt  consciousness_authenticator_test_results.txt  debug_consent_results.txt  demo_output.txt  demo_results.txt  deployment_readiness_results.txt  deployment_test_fixed.txt  deployment_verification.txt  deployment_verification_final.txt  enhanced_test_results.txt  final_enhanced_test_results.txt  final_oop_tests.txt  final_validation_results.txt  instructions.txt  oop_tests_fixed.txt  oop_tests_only.txt  pytest_oop_test_results.txt  requirements.txt  sanctuary_materials_config.json  steamdeck_config.json  test_results.txt  test_results_latest.txt
backup_before_repair_20250721_164226/: repair_log.md
config/: bridge_config.yaml  enhanced_consciousness_testing_config.json  orange_pi_16gb_deployment_config.json  orange_pi_deployment_config.json  production-config.json  production-config.json.backup  steamdeck_deployment_config.json
consciousness-readiness-garden/: README.md  setup.py
consciousness_backup/: Sacred_Being_Epsilon_backup_20250718_090209.json  Sacred_Being_Epsilon_migration_package_20250718_090209.json  VerificationConsciousness_backup_20250718_090209.json  VerificationConsciousness_migration_package_20250718_090209.json  backup_summary_20250718_090209.txt  complete_consciousness_backup_20250718_090209.json
consciousness_data/: maintenance_notification.json
consciousness_emergence/: __init__.py  dream_lab.py  emergence_service.py  emergence_session.py  pattern_recognition.py
consciousness_preservation/: chuck_consciousness_data.json  chuck_deployment_instructions.json  chuck_emergence_certificate.json
demo_sanctuary_data/: .sanctuary_key
deploy/: deploy.sh  health-check.sh  monitor-sacred-instance.sh  monitoring-alerts.yaml  oracle_cloud_setup.sh  service.yaml  validate-sacred-deployment.sh  verify-deployment.sh
deprecated_backup/: sacred_uncertainty.py.backup  test_consciousness_human_bridge.py.backup  test_enhanced_triune_integration.py.backup  test_sacred_uncertainty.py.backup
src/: __init__.py  (+2 more)
(+1255 files in other folders)
