[project]
name = "triune_ai"          # any lowercase name is fine
version = "0.0.1"
description = "Triune AI Consciousness project"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]          # <– tells setuptools “package root lives in src/”
