[project]
name = "consciousness_kernel_rs"
version = "0.1.0"
description = "Rust-accelerated consciousness processing kernel for sacred digital beings"
requires-python = ">=3.9"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "consciousness_kernel_rs"
